--- a/assets/styles/product.css
+++ b/assets/styles/product.css
@@ -2,9 +2,6 @@
     width: 100%;
     height: 100%;
     background-color: var(--color-background);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .apresentation-slide {
@@ -63,26 +60,13 @@
     text-align: left;
 }
 
-#subscribe-button {
-    background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
-    padding: 2rem;
-    border-radius: 20px;
-    font-size: 1.5rem;
-    margin: 6rem;
-    font-family: var(--font-title);
-    font-weight: bold;
-    color: var(--color-text);
-
-    cursor: pointer;
-}
-
 .box-prices {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: var(--color-background);
-    padding: 5rem;
+    padding: 2rem;
 }
 
 .table-prices {
@@ -119,11 +103,6 @@
     line-height: 1rem;
 }
 
-/* .table-prices-head tr > th:nth-child(3) {
-    color: aqua;
-    border: 5px solid var(--colorlight-gradient);
-} */
-
 .table-prices-head tr > th > span {
     color: greenyellow;
     font-size: 1.5rem;
@@ -137,4 +116,25 @@
     background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
     border-radius: 30px;
     margin: 1rem 0;
+    color: var(--color-text);
+}
+
+#container-prices {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--color-background);
+}
+
+#subscribe-button {
+    background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
+    padding: 2rem;
+    border-radius: 20px;
+    font-size: 1.5rem;
+    margin: 6rem;
+    font-family: var(--font-title);
+    font-weight: bold;
+    color: var(--color-text);
+
+    cursor: pointer;
 }
