--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,9 +18,13 @@
     --font-text: 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     width: 100vw;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     font-size: 1.2rem;
 }
 
@@ -30,9 +34,3 @@ button {
     font-family: var(--font-text);
     font-size: 1.2rem;
 }
-
-/* .container-div{
-    height: .8rem;
-    width: 100%;
-    background: linear-gradient(to bottom, var(--colorlight-gradient), var(--colorstrong-gradient));
-} */
