--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -4,12 +4,14 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 3rem;
-    
-    /* background-color: var(--color-background); */
-    /* position: fixed; */
-    position: absolute;
+    position: fixed;
     width: 100%;
     z-index: 2;
+}
+
+.headerScroll {
+    background-color: var(--color-background);
+    transition: all .5s ease;
 }
 
 .title-project {
@@ -65,6 +67,12 @@
     margin-top: 1rem;
     background: linear-gradient(to bottom, var(--colorlight-gradient), var(--colorstrong-gradient));
     border-radius: 6px 6px 0 0;
+}
+
+.item-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .item-navigation:hover .navbar-animation{
