Consertando bugs forms e favicon

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -19,6 +19,11 @@
     align-items: center;
 }
 
+.title-project > img {
+    width: 35px;
+    margin-right: .5rem;
+}
+
 .logo-project {
     width: 35px;
     margin-right: .5rem;
