--- a/assets/styles/modal.css
+++ b/assets/styles/modal.css
@@ -21,6 +21,7 @@
     height: 95%;
 
     border-radius: 40px;
+    overflow-y: scroll;
 }
 
 .modal-header {
@@ -55,7 +56,7 @@
 
 .form-inputs label{
     font-family: var(--font-text);
-    margin: .7rem 0 .5rem 0;
+    margin: 1.5rem 0 .5rem 0;
     font-weight: bold;
     font-size: 1.2rem;
 }
@@ -76,7 +77,7 @@
 
 .form-select label {
     font-family: var(--font-text);
-    margin: 1rem 0 .5rem 0;
+    margin: 1.5rem 0 .5rem 0;
     font-weight: bold;
     font-size: 1.2rem;
 }
@@ -95,7 +96,7 @@
     color: var(--color-text);
     padding: .7rem 2rem;
     border-radius: 30px;
-    margin-top: 1rem;
+    margin: 1rem 0;
 }
 
 .modalOpen {
