--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url(./reset.css);
-@import url(./home.css);
-@import url(./product.css);
-@import url(./contact.css);
-@import url(./rodape.css);
-@import url(./modal.css);
+@import url(./LandingPage/home.css);
+@import url(./LandingPage/product.css);
+@import url(./LandingPage/contact.css);
+@import url(./LandingPage/rodape.css);
+@import url(./LandingPage/modal.css);
 @import url(./animations/observer.css);
+
+@import url(./App/menu.css);
+@import url(./App/Relatorios.css);
 
 :root {
     --color-background: #262525;
