--- a/assets/styles/App/menu.css
+++ b/assets/styles/App/menu.css
@@ -2,6 +2,12 @@
     display: flex;
 }
 
+.container-principal {
+    background-color: #2b2b2b;
+    width: 100%;
+    height: 100vh;
+}
+
 .menu-lateral-app {
     display: flex;
     flex-direction: column;
