Criando Relatórios APP e arrumando HTML

--- a/assets/styles/App/menu.css
+++ b/assets/styles/App/menu.css
@@ -69,9 +69,12 @@
 
     height: 4rem;
     color: var(--color-gray);
-    /* background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient)); */
 }
 
 .btn-toggleMode > img {
     margin-right: .7rem;
+}
+
+.active {
+    background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
 }
