Criando interface gastos e ganhos

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,6 +11,7 @@
 @import url(./App/menu.css);
 @import url(./App/Relatorios.css);
 @import url(./App//swiper.css);
+@import url(./App/ganhosEGastos.css);
 
 :root {
     --color-background: #262525;
