Criando requisição e lógica da API de conversão

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,6 +13,7 @@
 @import url(./App//swiper.css);
 @import url(./App/ganhosEGastos.css);
 @import url(./App/formsApp.css);
+@import url(./App//conversor.css);
 
 :root {
     --color-background: #262525;
