--- a/assets/styles/App/ganhosEGastos.css
+++ b/assets/styles/App/ganhosEGastos.css
@@ -10,7 +10,7 @@
     justify-content: space-around;
     align-items: center;
 
-    border-bottom: 2px solid #333333;
+    border-bottom: 2px solid var(--color-border);
     height: 5rem;
 }
 
@@ -24,22 +24,6 @@
     margin-right: .5rem;
 }
 
-.controles > input {
-    width: 40%;
-    padding: .7rem;
-    border-radius: 20px;
-    background-color: #4a4949;
-    border: none;
-    color: var(--color-text);
-    font-size: 15px;
-}
-
-.controles > input::placeholder {
-    color: var(--color-text);
-    opacity: 80%;
-    font-size: 15px;
-}
-
 .controles > div > button {
     color: var(--color-text);
     font-family: var(--font-title);
@@ -50,14 +34,14 @@
 }
 
 .btn-add {
-    background-color: rgb(129, 205, 16);
+    background-color: var(--color-green);
     display: flex;
     align-items: center;
     cursor: pointer;
 }
 
 .btn-reset {
-    background-color: orange;
+    background-color: var(--color-orange);
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -74,7 +58,7 @@
     justify-content: space-between;
     align-items: center;
 
-    background-color: #4a4949;
+    background-color: var(--color-list);
     color: var(--color-text);
     margin: 2rem;
     padding: 1rem 2rem;
@@ -116,4 +100,12 @@
     font-family: var(--font-title);
     font-size: 25px;
     font-weight: bold;
+}
+
+.text-controles {
+    font-size: 25px;
+    font-family: var(--font-title);
+    font-weight: bold;
+
+    color: var(--color-text);
 }
