--- a/assets/styles/App/menu.css
+++ b/assets/styles/App/menu.css
@@ -3,7 +3,7 @@
 }
 
 .container-principal {
-    background-color: #2b2b2b;
+    background-color: var(--color-secondBackground);
     width: 100%;
     height: 100vh;
 }
@@ -25,7 +25,7 @@
 
     width: 100%;
     height: 5rem;
-    border-bottom: 1px solid #333333
+    border-bottom: 2px solid var(--color-border)
 }
 
 .title-project-lateral > img {
@@ -47,8 +47,12 @@
 }
 
 .navegacao-lista > li:hover {
-    background-color: #333333;
+    background-color: var(--color-border);
     transition: all .5s;
+}
+
+html.light .navegacao-lista > li:hover {
+    background-color: rgb(255, 255, 255);
 }
 
 .navegacao-lista > li > a {
@@ -66,9 +70,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     height: 4rem;
     color: var(--color-gray);
+    cursor: pointer;
+    background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
 }
 
 .btn-toggleMode > img {
