--- a/assets/styles/App/conversor.css
+++ b/assets/styles/App/conversor.css
@@ -1,9 +1,19 @@
+.conversor-texto {
+    font-family: var(--font-title);
+    font-size: 40px;
+    font-weight: 600;
+    background-image: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
 .container-forms {
     width: 60%;
     padding: 2rem;
     background-color: var(--color-background);
     border-radius: 20px;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,7 +31,7 @@
     align-items: center;
 }
 
-.container-saida > h1 {
+.container-saida>h1 {
     font-family: var(--font-title);
     font-weight: 600;
     font-size: 30px;
@@ -32,7 +42,7 @@
     color: transparent;
 }
 
-#formConversor{
+#formConversor {
     width: 50%;
 
     display: flex;
@@ -42,7 +52,7 @@
 }
 
 .conversorInput-valor {
-    width: auto;
+    width: 40%;
     height: 3rem;
     padding: 1rem;
     border-radius: 15px 0 0 15px;
@@ -84,10 +94,43 @@
     margin: 1.5rem 0 .5rem 0;
 }
 
-#conversorButton{
+#conversorButton {
     background: linear-gradient(to bottom, var(--colorlight-gradient), var(--colorstrong-gradient));
     padding: 1rem;
     border-radius: 20px;
     color: var(--color-text);
     margin-top: 2rem;
+}
+
+@media screen and (max-width:1100px) {
+    .conversor-texto {
+        font-size: 35px;
+        text-align: center;
+        padding: 0 3rem;
+        margin-top: 1rem;
+    }
+
+    .container-forms {
+        width: 90%;
+        padding: 2rem;
+        background-color: var(--color-background);
+        border-radius: 20px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #formConversor {
+        width: 100%;
+    }
+
+    .conversorInput-valor {
+        width: 50%;
+    }
+
+    .container-saida {
+        width: 90%;
+        height: 20%;
+    }
 }
