--- a/assets/styles/App/formsApp.css
+++ b/assets/styles/App/formsApp.css
@@ -1,6 +1,6 @@
 .formsApp-background {
     position: absolute;
-    z-index: 2;
+    z-index: 5;
 
     width: 100%;
     height: 100vh;
@@ -79,4 +79,23 @@
 .btn-close{
     background-color: var(--color-red);
     color: var(--color-text);
+}
+
+@media screen and (max-width:1100px) {
+    .formsApp-background {
+        top: 0;
+    }
+
+    .formsApp-container {
+        width: 90%;
+        height: 80%;
+    }
+
+    .formsApp-title {
+        text-align: center;
+    }
+
+    .formApp {
+        width: 80%;
+    }
 }
