--- a/assets/styles/App/menu.css
+++ b/assets/styles/App/menu.css
@@ -6,6 +6,12 @@
     background-color: var(--color-secondBackground);
     width: 100%;
     height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
 }
 
 .menu-lateral-app {
@@ -28,7 +34,13 @@
     border-bottom: 2px solid var(--color-border)
 }
 
-.title-project-lateral > img {
+.title-projet-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title-projet-logo>img {
     width: 35px;
     margin-right: .5rem;
 }
@@ -37,7 +49,7 @@
     margin: 4rem 0 0 2%;
 }
 
-.navegacao-lista > li {
+.navegacao-lista>li {
     margin: 1rem;
     border-radius: 10px;
     padding: 1rem;
@@ -46,12 +58,12 @@
     align-items: center;
 }
 
-.navegacao-lista > li:hover {
+.navegacao-lista>li:hover {
     background-color: var(--color-border);
     transition: all .5s;
 }
 
-html.light .navegacao-lista > li:hover {
+html.light .navegacao-lista>li:hover {
     background-color: rgb(255, 255, 255);
 }
 
@@ -62,6 +74,10 @@ html.light .navegacao-lista > li:hover {
     margin-left: .7rem;
 }
 
+html.light .navegacao-lista > li > a {
+    color: var(--color-text);
+}
+
 .navegacao-lista > li > img {
     width: 25px;
 }
@@ -70,16 +86,103 @@ html.light .navegacao-lista > li:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: var(--font-text);
     height: 4rem;
     color: var(--color-gray);
     cursor: pointer;
     background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
 }
 
-.btn-toggleMode > img {
+.btn-toggleMode>img {
     margin-right: .7rem;
 }
 
 .active {
     background: linear-gradient(to right, var(--colorlight-gradient), var(--colorstrong-gradient));
+}
+
+.menuHamburguer-button {
+    display: none;
+}
+
+.menuHamburguer {
+    display: none;
+}
+
+
+@media screen and (max-width:1100px) {
+
+    /* HEADER RESPONSIVO */
+
+    .menu-lateral-app {
+        width: 100%;
+        height: 5rem;
+    }
+
+    .menuHamburguer-button {
+        display: flex;
+        width: 40px;
+        height: 40px;
+        margin-right: 1rem;
+    }
+
+    .title-project-lateral {
+        position: absolute;
+        z-index: 3;
+
+        justify-content: space-between;
+        padding: 0 2.5rem;
+        background-color: var(--color-background);
+    }
+
+    .cabecalho-navegacao,
+    .btn-toggleMode {
+        display: none;
+    }
+
+    .menuToggle {
+        display: flex;
+    }
+
+    .cabecalho-navegacao-hamburguer {
+        position: absolute;
+        z-index: 3;
+        left: 0;
+        top: 5rem;
+
+        background-color: var(--color-background);
+        width: 60%;
+        height: 24rem;
+    }
+
+    /* LISTA MENU HAMBURGUER */
+
+    .navegacao-lista {
+        margin: 1rem 0 0 0;
+    }
+    
+    .navegacao-lista > li {
+        padding: .5rem;
+    }
+    
+    .navegacao-lista > li:hover {
+        background-color: transparent;
+    }
+    
+    html.light .navegacao-lista > li:hover {
+        background-color: transparent
+    }
+
+    .navegacao-lista > li > img {
+        width: 25px;
+    }
+
+    .active {
+        background: none;
+    }
+
+    .btn-toggleMode {
+        background: none;
+        border: 4px solid var(--colorlight-gradient);
+    }
 }
